# mnemome

./: .env.example  .gitignore  Dockerfile  README.md  compose.production.yaml  compose.yaml  design-qa.md  pyproject.toml
develop/: cultural-memory-hivemind.md  mnemome-overview.md
develop/cultural-memory/: 01-overview-and-boundaries.md  02-system-architecture-and-workflows.md  03-memory-layers.md  04-cultural-memory-functions.md  05-concept-validation.md  06-open-concept-questions.md  07-concept-refinement-roadmap.md  08-cultural-deliberation-system.md  README.md
develop/diagrams/: cultural-memory-workflows.mmd
docs/: conversation-memory-import-batch-design.md  deployment.md  llm-query-routing-migration-plan.md  streaming-link-rendering-plan.md
src/mnemome/: __init__.py  application.py  client.py  contracts.py  errors.py  facade.py  ids.py  ports.py  retrieval.py
src/mnemome/adapters/: __init__.py  memory.py  postgres.py  sqlite.py  valkey.py
src/mnemome/integrations/: __init__.py  lotte_agent.py
src/mnemome/service/: __main__.py  app.py  demo.py  demo_auth.py  demo_imports.py  prompting.py  prompts.yaml  (+3 more)
ssd/: 00-design-goals-and-scope.md  01-requirements-and-use-cases.md  02-system-context-and-containers.md  03-service-and-module-architecture.md  04-domain-model-and-lifecycles.md  05-agent-environment-and-working-memory.md  06-long-term-memory-and-retrieval.md  07-multi-agent-workspace.md  08-cultural-memory-and-deliberation.md  09-data-and-storage-architecture.md  10-api-and-event-contracts.md  11-security-privacy-and-governance.md  12-reliability-consistency-and-scalability.md  13-observability-and-operations.md  14-testing-and-quality-strategy.md  15-deployment-and-environments.md  16-implementation-roadmap.md  17-decisions-and-open-questions.md  18-library-embedding-and-on-premises.md  19-evaluation-and-llm-judge.md  20-cultural-memory-demo-implementation-plan.md  README.md
tests/: test_core.py  test_cultural_memory.py  test_demo_auth.py  test_demo_imports.py  test_lotte_integration.py  test_query_routing.py  test_service_api.py  test_sqlite_adapter.py  test_valkey_cache.py
(+4 files in other folders)
