[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mnemome"
version = "0.1.0"
description = "Library-first memory infrastructure for external AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Mnemome contributors"}]
dependencies = [
  "httpx>=0.27,<1",
  "nltk>=3.9,<4",
  "pecab>=1.0,<2",
]

[project.optional-dependencies]
service = [
  "fastapi>=0.115,<1",
  "mcp[cli]>=1.20,<2",
  "openai>=1.30,<3",
  "uvicorn[standard]>=0.30,<1",
]
dev = [
  "mnemome[service]",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.9,<1",
]

[project.scripts]
mnemome-api = "mnemome.service.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemome"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
